# notor

./: .env  Cargo.toml
migrations/: 20210216155241_auth.sql  20210218191852_users.sql
migrations/2021-01-17-080524_create_notes_tags/: down.sql  up.sql
notor-core/: Cargo.toml
notor-core/src/: error.rs  lib.rs  models.rs
notor-server/: Cargo.toml  db.sql
notor-server/migrations/: 20210214183143_notes.sql  20210216155241_auth.sql
notor-server/src/: auth.rs  filters.rs  lib.rs  main.rs  models.rs  rejections.rs
notor-server/src/handlers/: auth.rs  mod.rs  notes.rs  tags.rs
notor-server/src/routes/: mod.rs  notes.rs  tags.rs
notor-web/: Cargo.toml
notor-web/templates/: 404.stpl  head.stpl  login.stpl  note.stpl  tagview.stpl
src/: auth.rs  db.rs  filters.rs  handlers.rs  html.rs  lib.rs  main.rs  models.rs  rejections.rs  routes.rs  schema.rs  web.rs
src/handlers/: auth.rs  mod.rs  notes.rs  tags.rs  web.rs
src/routes/: auth.rs  mod.rs  notes.rs  tags.rs  web.rs
static/css/: style.css
static/js/: glue.js
templates/: head.stpl  html.stpl  index.stpl  login.stpl  note.stpl  tagview.stpl
