[package]
name = "notor"
version = "0.1.0"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"

[lib]
name = "notor"

[[bin]]
name = "notor-server"
path = "./src/main.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.3"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
dotenv = "0.15"
thiserror = "1"
funty = "=1.1.0" # temporary bugfix
jsonwebtoken = "7"
notor-core = { version = "0.1.0", path = "../notor-core" }

